--- a/main.html
+++ b/main.html
@@ -10,7 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h3>Testimonials</h3>
+	<div>
+		<p>This product is amazing! I highly recommend it to anyone in need of a sloution like this.</p>
+		<p style="text-align:right">-John Doe</p>
+	</div>
+	<div>
+		<p>I have been using this for a few weeks now and it has completely transformed my worlflow</p>
+	    <p style="text-align:right">-Jane Smith</p>
+	</div>
 </body>
 
 </html>
