--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<h3>Testimonials</h3>
 	<div>
-		<p>This product is amazing! I highly recommend it to anyone in need of a sloution like this.</p>
+		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
 		<p style="text-align:right">-John Doe</p>
 	</div>
 	<div>
