--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h3>Testimonials</h3>
+	<h1>Testimonials</h1>
 	<div>
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
-		<p style="text-align:right">-John Doe</p>
+		<p style="text-align:right;"><i>-John Doe</i></p>
 	</div>
 	<div>
 		<p>I have been using this for a few weeks now and it has completely transformed my worlflow</p>
-	    <p style="text-align:right">-Jane Smith</p>
+	    <p style="text-align:right"><i>-Jane Smith</i</p>
 	</div>
 </body>
 
