--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 	<h1>Testimonials</h1>
 	<div>
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
-		<p style="text-align:right;"><i>-John Doe</i></p>
+		<p class="p1">-John Doe</p>
 	</div>
 	<div>
 		<p>I have been using this for a few weeks now and it has completely transformed my worlflow</p>
-	    <p style="text-align:right"><i>-Jane Smith</i</p>
+	    <p class="p2"><i>-Jane Smith</i</p>
 	</div>
 </body>
 
