--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1>Testimonials</h1>
-	<div>
+	<div class="test">
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
 		<p class="p1">-John Doe</p>
 	</div>
-	<div>
+	<div class="test">
 		<p>I have been using this for a few weeks now and it has completely transformed my worlflow</p>
-	    <p class="p2"><i>-Jane Smith</i</p>
+	    <p class="p2">-Jane Smith</p>
 	</div>
 </body>
 
