--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="cont">
 	<h1>Testimonials</h1>
 	<div class="test">
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
@@ -18,6 +19,7 @@
 	<div class="test">
 		<p>I have been using this for a few weeks now and it has completely transformed my worlflow</p>
 	    <p class="p2">-Jane Smith</p>
+	</div>
 	</div>
 </body>
 
